# Fylix

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
admin-frontend/: Dockerfile  env.d.ts  index.html  nginx-spa.conf  package-lock.json  package.json  (+3 more)
backend/: Dockerfile  Dockerfile.dev  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_core_tables.py  0002_admin_tables.py  0003_seed_settings.py  0004_recipient_locale_and_admin_settings.py  0005_admin_actions_fk_set_null.py  0006_telegram_settings.py  0007_audit_log_fks.py  0008_blocklist_fks_set_null.py  0009_transfers_status_partial_index.py  0010_transfer_files_filename_trgm.py  0011_transfers_created_id_composite.py
backend/app/: config.py  context.py  db.py  http.py  logging_config.py  main.py  observability.py  state.py
backend/app/crypto/: __init__.py  envelope.py  master_key.py  stream.py
backend/app/middleware/: csrf.py  rate_limit.py  request_id.py
backend/app/models/: __init__.py  admin.py  audit.py  blocklist.py  settings.py  transfer.py
backend/app/routers/: admin.py  metrics.py  public.py
backend/app/schemas/: admin.py  transfer.py
backend/app/services/: admin_actions.py  alerts.py  analytics.py  audit.py  auth.py  blocklist.py  captcha.py  email.py  geoip.py  policy.py  rate_limit.py  session.py  settings_service.py  staging.py  storage.py  telegram.py  tokens.py  transfer.py
backend/app/services/templates/: recipient.en.html  recipient.kk.html  recipient.ru.html  sender_confirm.en.html  sender_confirm.kk.html  sender_confirm.ru.html  sender_download_notice.en.html  sender_download_notice.kk.html  sender_download_notice.ru.html
backend/app/tus/: handler.py
backend/app/utils/: http.py
backend/app/worker/: __main__.py  dlq.py  main.py  queues.py
backend/app/worker/tasks/: cleanup.py  defender_poll.py  email_send.py  encrypt.py
backend/scripts/: backup_smoke_restore.sh  create_admin.py  dump_openapi.py  rotate_master_key.py  wrap_totp_secrets.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_admin_analytics.py  test_admin_audit.py  test_admin_blocklist.py  test_admin_login.py  test_admin_session_deps.py  test_admin_settings.py  test_admin_transfers.py  test_admins_crud.py  test_blocklist_service.py  test_cleanup_worker.py  test_create_admin_script.py  test_create_transfer_endpoint.py  test_defender_poll.py  test_download.py  test_download_notice.py  test_email_delivery.py  test_encrypt_worker.py  test_guards_wiring.py  test_healthz.py  test_key_rotation.py  test_rate_limit_middleware.py  test_secure_cookies.py  test_sender_panel.py  test_telegram_config.py  test_totp_wrap_migration.py  test_transfer_service.py  test_tus_upload.py  test_upload_emails.py
backend/tests/unit/: test_admin_cursor.py  test_audit_csv_window.py  test_config.py  test_dlq.py  test_http_utils.py  test_logging_config.py  test_metrics.py  test_patch_settings.py  test_request_id.py
backend/tests/unit/crypto/: test_envelope.py  test_golden_vectors.py  test_master_key.py  test_stream.py
backend/tests/unit/schemas/: test_transfer.py
backend/tests/unit/services/: test_admin_actions.py  test_alerts.py  test_auth.py  test_auth_wrap.py  test_captcha.py  test_csrf.py  test_email_renderer.py  test_geoip.py  test_policy.py  test_rate_limit.py  test_session.py  test_staging.py  test_storage.py  test_telegram.py  test_telegram_wrap.py  test_tokens.py
(+102 files in other folders)
